// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartFacet /> should edit 1`] = `
<ChartForm
  chart={
    Object {
      "attribute": "system.type",
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "facet",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={true}
  setIsEditing={[Function]}
/>
`;

exports[`<ChartFacet /> should render properly 1`] = `
.emotion-87 {
  height: 100%;
  overflow: hidden;
}

.emotion-86 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-7 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 2px;
}

.emotion-6:hover button svg {
  opacity: 1;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 6px;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2 svg {
  color: #808080;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-2:hover svg,
.emotion-2.focus-visible:focus svg {
  opacity: 1;
  color: #ffffff;
}

.emotion-1 {
  opacity: 0;
}

.emotion-3 {
  width: 2px;
}

.emotion-85 {
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-85 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-85 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-84 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  padding-right: 28px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

.emotion-79 {
  margin: 0;
  padding: 0;
  list-style: none;
  overflow-y: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-18 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  color: #ffffff;
}

.emotion-18:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-18:hover,
.emotion-18.focus-visible:focus {
  background-color: #027aff38;
  color: #ffffff;
}

.emotion-18:hover svg,
.emotion-18.focus-visible:focus svg {
  color: #ffffff;
}

.emotion-17 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  width: 100%;
  background-color: #4a90e2;
}

.emotion-10 {
  height: 4px;
  width: 0%;
  border-top: 1px solid #3b3b3b;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-12 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-13 {
  padding-left: 8px;
}

.emotion-16 {
  margin-top: 4px;
  padding: 4px;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-19 {
  width: 67%;
  background-color: #a03dc7;
}

.emotion-20 {
  height: 4px;
  width: 33%;
  border-top: 1px solid #3b3b3b;
}

.emotion-29 {
  width: 34%;
  background-color: #d6680b;
}

.emotion-30 {
  height: 4px;
  width: 66%;
  border-top: 1px solid #3b3b3b;
}

.emotion-39 {
  width: 34%;
  background-color: #ebb52e;
}

.emotion-49 {
  width: 34%;
  background-color: #00bdc1;
}

.emotion-59 {
  width: 34%;
  background-color: #c54a4a;
}

.emotion-69 {
  width: 0%;
  background-color: #ff7867;
}

.emotion-70 {
  height: 4px;
  width: 100%;
  border-top: 1px solid #3b3b3b;
}

.emotion-83 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-82 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #808080;
  font-family: Roboto Condensed;
}

.emotion-82:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-82[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-82:hover,
.emotion-82.focus-visible:focus {
  color: #ffffff;
}

.emotion-81 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-80 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-87"
>
  <div
    className="emotion-86"
  >
    <div
      className="emotion-7"
    >
      <div
        className="emotion-6"
      >
        <h3
          className="emotion-0"
        >
          location.city
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-2"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            className="emotion-1"
            data-file-name="pen.svg"
            width={20}
          />
        </button>
        <div
          className="emotion-3"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-2"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            className="emotion-1"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-85"
    >
      <div
        className="emotion-84"
      >
        <div
          className="emotion-8"
        >
          <div>
            LABEL
          </div>
          <div>
            COUNT
          </div>
        </div>
        <ul
          className="emotion-79"
        >
          <li>
            <button
              aria-label="Tyngsboro"
              className="emotion-18"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-15"
                >
                  <div
                    className="emotion-11"
                  >
                    <div
                      className="emotion-9"
                    />
                    <div
                      className="emotion-10"
                    />
                  </div>
                  <div
                    className="emotion-14"
                  >
                    <div
                      className="emotion-12"
                    >
                      Tyngsboro
                    </div>
                    <div
                      className="emotion-13"
                    >
                      3
                    </div>
                  </div>
                </div>
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="Brooklyn"
              className="emotion-18"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-15"
                >
                  <div
                    className="emotion-11"
                  >
                    <div
                      className="emotion-19"
                    />
                    <div
                      className="emotion-20"
                    />
                  </div>
                  <div
                    className="emotion-14"
                  >
                    <div
                      className="emotion-12"
                    >
                      Brooklyn
                    </div>
                    <div
                      className="emotion-13"
                    >
                      2
                    </div>
                  </div>
                </div>
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="Cát Bà"
              className="emotion-18"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-15"
                >
                  <div
                    className="emotion-11"
                  >
                    <div
                      className="emotion-29"
                    />
                    <div
                      className="emotion-30"
                    />
                  </div>
                  <div
                    className="emotion-14"
                  >
                    <div
                      className="emotion-12"
                    >
                      Cát Bà
                    </div>
                    <div
                      className="emotion-13"
                    >
                      1
                    </div>
                  </div>
                </div>
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="La Habana Vieja"
              className="emotion-18"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-15"
                >
                  <div
                    className="emotion-11"
                  >
                    <div
                      className="emotion-39"
                    />
                    <div
                      className="emotion-30"
                    />
                  </div>
                  <div
                    className="emotion-14"
                  >
                    <div
                      className="emotion-12"
                    >
                      La Habana Vieja
                    </div>
                    <div
                      className="emotion-13"
                    >
                      1
                    </div>
                  </div>
                </div>
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="North Glendale"
              className="emotion-18"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-15"
                >
                  <div
                    className="emotion-11"
                  >
                    <div
                      className="emotion-49"
                    />
                    <div
                      className="emotion-30"
                    />
                  </div>
                  <div
                    className="emotion-14"
                  >
                    <div
                      className="emotion-12"
                    >
                      North Glendale
                    </div>
                    <div
                      className="emotion-13"
                    >
                      1
                    </div>
                  </div>
                </div>
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="Saalfelden am Steinernen Meer"
              className="emotion-18"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-15"
                >
                  <div
                    className="emotion-11"
                  >
                    <div
                      className="emotion-59"
                    />
                    <div
                      className="emotion-30"
                    />
                  </div>
                  <div
                    className="emotion-14"
                  >
                    <div
                      className="emotion-12"
                    >
                      Saalfelden am Steinernen Meer
                    </div>
                    <div
                      className="emotion-13"
                    >
                      1
                    </div>
                  </div>
                </div>
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="Zermatt"
              className="emotion-18"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-15"
                >
                  <div
                    className="emotion-11"
                  >
                    <div
                      className="emotion-69"
                    />
                    <div
                      className="emotion-70"
                    />
                  </div>
                  <div
                    className="emotion-14"
                  >
                    <div
                      className="emotion-12"
                    >
                      Zermatt
                    </div>
                    <div
                      className="emotion-13"
                    >
                      0
                    </div>
                  </div>
                </div>
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
              </div>
            </button>
          </li>
        </ul>
        <div
          className="emotion-83"
        >
          <button
            aria-label="Add Field Filter"
            className="emotion-82"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-81"
            >
              <div
                className="emotion-80"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
              Add Field Filter
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartFacet /> should render properly without data 1`] = `
.emotion-17 {
  height: 100%;
  overflow: hidden;
}

.emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-7 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 2px;
}

.emotion-6:hover button svg {
  opacity: 1;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 6px;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2 svg {
  color: #808080;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-2:hover svg,
.emotion-2.focus-visible:focus svg {
  opacity: 1;
  color: #ffffff;
}

.emotion-1 {
  opacity: 0;
}

.emotion-3 {
  width: 2px;
}

.emotion-15 {
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-15 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-15 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  padding-right: 28px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

.emotion-9 {
  margin: 0;
  padding: 0;
  list-style: none;
  overflow-y: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #808080;
  font-family: Roboto Condensed;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12:hover,
.emotion-12.focus-visible:focus {
  color: #ffffff;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-17"
>
  <div
    className="emotion-16"
  >
    <div
      className="emotion-7"
    >
      <div
        className="emotion-6"
      >
        <h3
          className="emotion-0"
        >
          location.city
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-2"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            className="emotion-1"
            data-file-name="pen.svg"
            width={20}
          />
        </button>
        <div
          className="emotion-3"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-2"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            className="emotion-1"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-15"
    >
      <div
        className="emotion-14"
      >
        <div
          className="emotion-8"
        >
          <div>
            LABEL
          </div>
          <div>
            COUNT
          </div>
        </div>
        <ul
          className="emotion-9"
        />
        <div
          className="emotion-13"
        >
          <button
            aria-label="Add Field Filter"
            className="emotion-12"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-11"
            >
              <div
                className="emotion-10"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
              Add Field Filter
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartFacet /> should render without an attribute 1`] = `
<ChartForm
  chart={
    Object {
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "facet",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={false}
  setIsEditing={[Function]}
/>
`;
